# SCOP

./: .gitignore  42.obj:Zone.Identifier  CMakeLists.txt  Makefile  OpenGL_Project  controls.cpp  controls.h  main.cpp  obj_loader.cpp  obj_loader.h  shaders.cpp  shaders.h  surface-water-with-foam.jpg:Zone.Identifier  utils.cpp  utils.h
include/: shader.hpp
shaders/: fragment_shader_flat.glsl  vertex_shader_flat.glsl
src/: main.cpp  shader.cpp  shader.hpp
textures/: 14657838_5514688.jpg:Zone.Identifier
